--- a/index.html
+++ b/index.html
@@ -7,7 +7,47 @@
 </head>
 
 <body>
-    
+    <header>
+        <h1>Working with the Cascade, Inheritance and Specificity</h1>
+    </header>
+
+    <main>
+        <article id="todo">
+            <h2>To Dos</h2>
+            <ul class="todo">
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+                <li>Item 5</li>
+                <li>Item 6</li>
+            </ul>
+        </article>
+
+        <article id="inprogress">
+            <h2>In Progress</h2>
+            <ul class="inprogress">
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+                <li>Item 5</li>
+                <li>Item 6</li>
+            </ul>
+        </article>
+
+        <article id="done">
+            <h2>Done</h2>
+            <ul class="done">
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+                <li>Item 5</li>
+                <li>Item 6</li>
+            </ul>
+        </article>
+    </main>
 </body>
 
 </html>
