--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="css/main.css" rel="styelsheet">
+    <link href="css/main.css" rel="stylesheet">
     <title>To Do List</title>
 </head>
 
